--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
 
     <!-- Header -->
     <header>
-
         <div class="custom bg-dark">
             <div class="row">
                 <div class="col-md-4">
@@ -37,7 +36,7 @@
         </div>
 
         <div class="container">
-            <nav class="navbar navbar-expand-lg navbar-light">
+            <nav class="navbar navbar-expand-lg navbar-light smart-scroll">
                 <a class="navbar-brand" href="#">
                     <img src="assets/img/logo.png" height="50" width="150" alt="">
                 </a>
@@ -64,7 +63,7 @@
 
         <div class="overlay">
             <h1 class="h1 text-light">Keep It Simple And Useful</h1>
-            <h6 class="text-light">Manik - Manik Murah Dan Elegant</h6>
+            <h6 class="text-light">Lokal Sovenir, Yang Lokal Yang Lestari</h6>
         </div>
     </section>
 
@@ -178,10 +177,21 @@
     <div class="card text-white bg-dark mt-3">
         <div class="container">
             <div class="card-header">HUBUNGI KAMI MELALUI</div>
-            <div class="card-body">
-                <p> Jl.Ciwaruga No.53 Kecamatan Parongpong Kabupaten Bandung Barat</p>
-                <p>+62895380113593</p>
-                <p>copenire.web@gmail.com</p>
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="card-body">
+                        <p> Jl.Ciwaruga No.53 Kecamatan Parongpong Kabupaten Bandung Barat</p>
+                        <p>+62895380113593</p>
+                        <p>copenire.web@gmail.com</p>
+                    </div>
+                </div>
+
+                <div class="col-md-6">
+                    <div class="card-body">
+                        <p>Supported By : </p>
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c7/Google_Ads_logo.svg/820px-Google_Ads_logo.svg.png" width="50" class="img-fluid mr-2">
+                    </div>
+                </div>
             </div>
         </div>
     </div>
