--- a/index.html
+++ b/index.html
@@ -18,6 +18,25 @@
 <body>
 
     <!-- Header -->
+
+    <nav class="navbar navbar-expand-lg navbar-light smart-scroll">
+        <div class="container">
+            <a class="navbar-brand" href="#">
+                <img src="assets/img/logo.png" height="50" width="150" alt="">
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav ml-auto">
+                    <a class="nav-item nav-link active btn-ripple" href="#">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-item nav-link btn-ripple" href="#">Contact</a>
+                    <a class="nav-item nav-link btn-ripple" href="#">About</a>
+                </div>
+            </div>
+        </div>
+    </nav>
+
     <header>
         <div class="custom bg-dark">
             <div class="row">
@@ -35,23 +54,7 @@
             </div>
         </div>
 
-        <div class="container">
-            <nav class="navbar navbar-expand-lg navbar-light smart-scroll">
-                <a class="navbar-brand" href="#">
-                    <img src="assets/img/logo.png" height="50" width="150" alt="">
-                </a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                    <div class="navbar-nav ml-auto">
-                        <a class="nav-item nav-link active btn-ripple" href="#">Home <span class="sr-only">(current)</span></a>
-                        <a class="nav-item nav-link btn-ripple" href="#">Contact</a>
-                        <a class="nav-item nav-link btn-ripple" href="#">About</a>
-                    </div>
-                </div>
-            </nav>
-        </div>
+
     </header>
 
     <!-- MastHead -->
@@ -62,14 +65,15 @@
           </video>
 
         <div class="overlay">
-            <h1 class="h1 text-light">Keep It Simple And Useful</h1>
-            <h6 class="text-light">Lokal Sovenir, Yang Lokal Yang Lestari</h6>
+            <h1 class="h1 text-light title-product">Keep It Simple And Useful</h1>
+            <h6 class="text-light title-product">Lokal Sovenir, Yang Lokal Yang Lestari</h6>
         </div>
     </section>
 
     <!-- katalog -->
     <section class="catalog container">
-        <h1 class="text-center mt-5 mb-5 title">Katalog</h1>
+        <h1 class="text-center mt-5 m-0 title">Katalog</h1>
+        <hr class="divider my-4">
         <div class="container-fluid p-0">
             <div class="row no-gutters ">
                 <div class="col-lg-4 col-sm-6 katalog btn-ripple">
@@ -132,7 +136,8 @@
 
     <!-- Marketplace -->
     <section class="container mb-5">
-        <h1 class="mt-5 mb-5 text-center title">Find Our Product</h1>
+        <h1 class="mt-5 text-center title">Find Our Product</h1>
+        <hr class="divider my-4">
         <div class="row text-center">
             <div class="col-md-4">
                 <div class="mt-5">
@@ -173,6 +178,57 @@
         </div>
     </section>
 
+    <!-- Contact -->
+    <section class="page-section" id="contact">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-lg-8 text-center">
+                    <h2 class="m-0">Kontak Kami</h2>
+                    <hr class="divider my-4">
+                    <p class="text-muted mb-5">Ready to start your next project with us? Give us a call or send us an email and we will get back to you as soon as possible!</p>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-lg-4 ml-auto text-center mb-5 mb-lg-0">
+                    <i class="fas fa-phone fa-3x mb-3 text-muted"></i>
+                    <div>+1 (234) 567-8910</div>
+                </div>
+
+                <div class="col-lg-4 mr-auto text-center">
+                    <i class="fas fa-envelope fa-3x mb-3 text-muted"></i>
+                    <a href="mailto:contact@yourwebsite" class="d-block">contact@yourwebsite</a>
+                </div>
+            </div>
+            <div class="row mt-5 justify-content-center">
+                <div class="col-md-8">
+                    <p>Kontak Kami</p>
+                    <div class="form-group">
+                        <input type="text" id="name" class="form-control" placeholder="Your Name">
+                    </div>
+                    <div class="form-group">
+                        <input type="text" id="subject" class="form-control" placeholder="Subject">
+                    </div>
+                    <div class="form-group">
+                        <textarea id="message" class="form-control" placeholder="Message"></textarea>
+                        </textarea>
+                    </div>
+                    <div class="form-group">
+                        <button class="form-control btn btn-danger" id="send">Send Message</button>
+                    </div>
+                    <hr>
+                    <span id="respon"></span>
+                    <br>
+                    <span id="getName"></span>
+                    <br>
+                    <span id="getSubject"></span>
+                    <br>
+                    <span id="getMessage"></span>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Jalan -->
     <div class="card text-white bg-dark mt-3">
         <div class="container">
@@ -195,6 +251,8 @@
             </div>
         </div>
     </div>
+
+
 
     <!-- Footer -->
     <div class="footer">
