--- a/index.html
+++ b/index.html
@@ -19,43 +19,45 @@
 
     <!-- Header -->
 
-    <nav class="navbar navbar-expand-lg navbar-light smart-scroll">
-        <div class="container">
-            <a class="navbar-brand" href="#">
-                <img src="assets/img/logo.png" height="50" width="150" alt="">
-            </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
-                </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav ml-auto">
-                    <a class="nav-item nav-link active btn-ripple" href="#">Home <span class="sr-only">(current)</span></a>
-                    <a class="nav-item nav-link btn-ripple" href="#">Contact</a>
-                    <a class="nav-item nav-link btn-ripple" href="#">About</a>
+    <section>
+        <nav class="navbar navbar-expand-lg navbar-light smart-scroll">
+            <div class="container">
+                <a class="navbar-brand" href="#">
+                    <img src="assets/img/logo.png" height="50" width="150" alt="">
+                </a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                      <span class="navbar-toggler-icon"></span>
+                    </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav ml-auto">
+                        <a class="nav-item nav-link active btn-ripple" href="#">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-item nav-link btn-ripple" href="#">Contact</a>
+                        <a class="nav-item nav-link btn-ripple" href="#">About</a>
+                    </div>
                 </div>
             </div>
-        </div>
-    </nav>
+        </nav>
+    </section>
 
-    <header>
-        <div class="custom bg-dark">
-            <div class="row">
-                <div class="col-md-4">
-                    <p>+62895382013493</p>
-                </div>
+    <section>
+        <header>
+            <div class="custom bg-dark">
+                <div class="row">
+                    <div class="col-md-4">
+                        <p>+62895382013493</p>
+                    </div>
 
-                <div class="col-md-4">
-                    <p>Fast Response : 08.00 - 21.00 WIB</p>
-                </div>
+                    <div class="col-md-4">
+                        <p>Fast Response : 08.00 - 21.00 WIB</p>
+                    </div>
 
-                <div class="col-md-4">
-                    <p>copenire.web@gmail.com</p>
+                    <div class="col-md-4">
+                        <p>copenire.web@gmail.com</p>
+                    </div>
                 </div>
             </div>
-        </div>
-
-
-    </header>
+        </header>
+    </section>
 
     <!-- MastHead -->
     <section class="mast-head">
